// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Replies when there are no replies renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Replies
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/profile-pic-may.jpg",
          },
          "name": "Maynara F",
        },
        "body": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
        "dateCreated": 2019-01-01T00:00:00.000Z,
        "id": "21097",
        "replies": Array [],
        "title": "Meu pai fez o que ela mandou…",
        "totalReplies": 0,
      }
    }
    onPressComment={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Text
              style={
                Object {
                  "fontStyle": "italic",
                  "marginHorizontal": 5,
                  "padding": 10,
                }
              }
            >
              &lt; 
              Voltar aos Comentários
            </Text>
          </TouchableOpacity>
        </View>,
        <View
          style={
            Object {
              "backgroundColor": "rgba(198, 213, 225, 0.75)",
              "marginBottom": 20,
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Component
              source={
                Object {
                  "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                }
              }
              style={
                Object {
                  "backgroundColor": "rgba(4, 71, 47, 0.75)",
                  "borderRadius": 30,
                  "height": 60,
                  "marginBottom": 10,
                  "overflow": "hidden",
                  "width": 60,
                }
              }
            />
            <View
              style={
                Object {
                  "paddingLeft": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                  }
                }
              >
                Maynara F
              </Text>
              <Text
                style={
                  Object {
                    "color": "rgb(51, 51, 51)",
                    "fontStyle": "italic",
                    "marginBottom": 10,
                  }
                }
              >
                01/01/2019
              </Text>
            </View>
          </View>
          <View>
            <Text
              style={
                Object {
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "marginBottom": 5,
                }
              }
            >
              Meu pai fez o que ela mandou…
            </Text>
            <Text>
              Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
            </Text>
          </View>
        </View>,
        <View>
          <Text>
            Nenhuma resposta ainda. Seja a primeira!
          </Text>
        </View>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Text
              style={
                Object {
                  "fontStyle": "italic",
                  "marginHorizontal": 5,
                  "padding": 10,
                }
              }
            >
              &lt; 
              Voltar aos Comentários
            </Text>
          </TouchableOpacity>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              style={
                Object {
                  "fontStyle": "italic",
                  "marginHorizontal": 5,
                  "padding": 10,
                }
              }
            >
              &lt; 
              Voltar aos Comentários
            </Text>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "< ",
                "Voltar aos Comentários",
              ],
              "style": Object {
                "fontStyle": "italic",
                "marginHorizontal": 5,
                "padding": 10,
              },
            },
            "ref": null,
            "rendered": Array [
              "< ",
              "Voltar aos Comentários",
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Component
                source={
                  Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 30,
                    "height": 60,
                    "marginBottom": 10,
                    "overflow": "hidden",
                    "width": 60,
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingLeft": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  Maynara F
                </Text>
                <Text
                  style={
                    Object {
                      "color": "rgb(51, 51, 51)",
                      "fontStyle": "italic",
                      "marginBottom": 10,
                    }
                  }
                >
                  01/01/2019
                </Text>
              </View>
            </View>,
            <View>
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                  }
                }
              >
                Meu pai fez o que ela mandou…
              </Text>
              <Text>
                Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
              </Text>
            </View>,
          ],
          "style": Object {
            "backgroundColor": "rgba(198, 213, 225, 0.75)",
            "marginBottom": 20,
            "padding": 10,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 30,
                      "height": 60,
                      "marginBottom": 10,
                      "overflow": "hidden",
                      "width": 60,
                    }
                  }
                />,
                <View
                  style={
                    Object {
                      "paddingLeft": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "marginBottom": 5,
                      }
                    }
                  >
                    Maynara F
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "rgb(51, 51, 51)",
                        "fontStyle": "italic",
                        "marginBottom": 10,
                      }
                    }
                  >
                    01/01/2019
                  </Text>
                </View>,
              ],
              "style": Object {
                "flexDirection": "row",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  },
                  "style": Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 30,
                    "height": 60,
                    "marginBottom": 10,
                    "overflow": "hidden",
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Text
                      style={
                        Object {
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "marginBottom": 5,
                        }
                      }
                    >
                      Maynara F
                    </Text>,
                    <Text
                      style={
                        Object {
                          "color": "rgb(51, 51, 51)",
                          "fontStyle": "italic",
                          "marginBottom": 10,
                        }
                      }
                    >
                      01/01/2019
                    </Text>,
                  ],
                  "style": Object {
                    "paddingLeft": 10,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Maynara F",
                      "style": Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "marginBottom": 5,
                      },
                    },
                    "ref": null,
                    "rendered": "Maynara F",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "01/01/2019",
                      "style": Object {
                        "color": "rgb(51, 51, 51)",
                        "fontStyle": "italic",
                        "marginBottom": 10,
                      },
                    },
                    "ref": null,
                    "rendered": "01/01/2019",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  Meu pai fez o que ela mandou…
                </Text>,
                <Text>
                  Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
                </Text>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Meu pai fez o que ela mandou…",
                  "style": Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                  },
                },
                "ref": null,
                "rendered": "Meu pai fez o que ela mandou…",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                },
                "ref": null,
                "rendered": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Text>
            Nenhuma resposta ainda. Seja a primeira!
          </Text>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Nenhuma resposta ainda. Seja a primeira!",
          },
          "ref": null,
          "rendered": "Nenhuma resposta ainda. Seja a primeira!",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Text
                style={
                  Object {
                    "fontStyle": "italic",
                    "marginHorizontal": 5,
                    "padding": 10,
                  }
                }
              >
                &lt; 
                Voltar aos Comentários
              </Text>
            </TouchableOpacity>
          </View>,
          <View
            style={
              Object {
                "backgroundColor": "rgba(198, 213, 225, 0.75)",
                "marginBottom": 20,
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Component
                source={
                  Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 30,
                    "height": 60,
                    "marginBottom": 10,
                    "overflow": "hidden",
                    "width": 60,
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingLeft": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  Maynara F
                </Text>
                <Text
                  style={
                    Object {
                      "color": "rgb(51, 51, 51)",
                      "fontStyle": "italic",
                      "marginBottom": 10,
                    }
                  }
                >
                  01/01/2019
                </Text>
              </View>
            </View>
            <View>
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                  }
                }
              >
                Meu pai fez o que ela mandou…
              </Text>
              <Text>
                Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
              </Text>
            </View>
          </View>,
          <View>
            <Text>
              Nenhuma resposta ainda. Seja a primeira!
            </Text>
          </View>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Text
                style={
                  Object {
                    "fontStyle": "italic",
                    "marginHorizontal": 5,
                    "padding": 10,
                  }
                }
              >
                &lt; 
                Voltar aos Comentários
              </Text>
            </TouchableOpacity>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Text
                style={
                  Object {
                    "fontStyle": "italic",
                    "marginHorizontal": 5,
                    "padding": 10,
                  }
                }
              >
                &lt; 
                Voltar aos Comentários
              </Text>,
              "onPress": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "< ",
                  "Voltar aos Comentários",
                ],
                "style": Object {
                  "fontStyle": "italic",
                  "marginHorizontal": 5,
                  "padding": 10,
                },
              },
              "ref": null,
              "rendered": Array [
                "< ",
                "Voltar aos Comentários",
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 30,
                      "height": 60,
                      "marginBottom": 10,
                      "overflow": "hidden",
                      "width": 60,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "paddingLeft": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "marginBottom": 5,
                      }
                    }
                  >
                    Maynara F
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "rgb(51, 51, 51)",
                        "fontStyle": "italic",
                        "marginBottom": 10,
                      }
                    }
                  >
                    01/01/2019
                  </Text>
                </View>
              </View>,
              <View>
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  Meu pai fez o que ela mandou…
                </Text>
                <Text>
                  Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
                </Text>
              </View>,
            ],
            "style": Object {
              "backgroundColor": "rgba(198, 213, 225, 0.75)",
              "marginBottom": 20,
              "padding": 10,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Component
                    source={
                      Object {
                        "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                      }
                    }
                    style={
                      Object {
                        "backgroundColor": "rgba(4, 71, 47, 0.75)",
                        "borderRadius": 30,
                        "height": 60,
                        "marginBottom": 10,
                        "overflow": "hidden",
                        "width": 60,
                      }
                    }
                  />,
                  <View
                    style={
                      Object {
                        "paddingLeft": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "marginBottom": 5,
                        }
                      }
                    >
                      Maynara F
                    </Text>
                    <Text
                      style={
                        Object {
                          "color": "rgb(51, 51, 51)",
                          "fontStyle": "italic",
                          "marginBottom": 10,
                        }
                      }
                    >
                      01/01/2019
                    </Text>
                  </View>,
                ],
                "style": Object {
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    },
                    "style": Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 30,
                      "height": 60,
                      "marginBottom": 10,
                      "overflow": "hidden",
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Text
                        style={
                          Object {
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "marginBottom": 5,
                          }
                        }
                      >
                        Maynara F
                      </Text>,
                      <Text
                        style={
                          Object {
                            "color": "rgb(51, 51, 51)",
                            "fontStyle": "italic",
                            "marginBottom": 10,
                          }
                        }
                      >
                        01/01/2019
                      </Text>,
                    ],
                    "style": Object {
                      "paddingLeft": 10,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "Maynara F",
                        "style": Object {
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "marginBottom": 5,
                        },
                      },
                      "ref": null,
                      "rendered": "Maynara F",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "01/01/2019",
                        "style": Object {
                          "color": "rgb(51, 51, 51)",
                          "fontStyle": "italic",
                          "marginBottom": 10,
                        },
                      },
                      "ref": null,
                      "rendered": "01/01/2019",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    style={
                      Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "marginBottom": 5,
                      }
                    }
                  >
                    Meu pai fez o que ela mandou…
                  </Text>,
                  <Text>
                    Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
                  </Text>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Meu pai fez o que ela mandou…",
                    "style": Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    },
                  },
                  "ref": null,
                  "rendered": "Meu pai fez o que ela mandou…",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                  },
                  "ref": null,
                  "rendered": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text>
              Nenhuma resposta ainda. Seja a primeira!
            </Text>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Nenhuma resposta ainda. Seja a primeira!",
            },
            "ref": null,
            "rendered": "Nenhuma resposta ainda. Seja a primeira!",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Replies when there are replies renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Replies
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/profile-pic-may.jpg",
          },
          "name": "Maynara F",
        },
        "body": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
        "dateCreated": 2019-01-01T00:00:00.000Z,
        "id": "21097",
        "replies": Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-annon.png",
              },
              "name": "Kelli S",
            },
            "body": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
            "dateCreated": 2019-01-02T00:00:00.000Z,
            "id": "21098",
          },
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-annon.png",
              },
              "name": "Kelli S",
            },
            "body": "Nem faço mais questão de saber pra onde ele foi.",
            "dateCreated": 2019-01-03T00:00:00.000Z,
            "id": "21099",
          },
        ],
        "title": "Meu pai fez o que ela mandou…",
        "totalReplies": 2,
      }
    }
    onPressComment={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Text
              style={
                Object {
                  "fontStyle": "italic",
                  "marginHorizontal": 5,
                  "padding": 10,
                }
              }
            >
              &lt; 
              Voltar aos Comentários
            </Text>
          </TouchableOpacity>
        </View>,
        <View
          style={
            Object {
              "backgroundColor": "rgba(198, 213, 225, 0.75)",
              "marginBottom": 20,
              "padding": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Component
              source={
                Object {
                  "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                }
              }
              style={
                Object {
                  "backgroundColor": "rgba(4, 71, 47, 0.75)",
                  "borderRadius": 30,
                  "height": 60,
                  "marginBottom": 10,
                  "overflow": "hidden",
                  "width": 60,
                }
              }
            />
            <View
              style={
                Object {
                  "paddingLeft": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                  }
                }
              >
                Maynara F
              </Text>
              <Text
                style={
                  Object {
                    "color": "rgb(51, 51, 51)",
                    "fontStyle": "italic",
                    "marginBottom": 10,
                  }
                }
              >
                01/01/2019
              </Text>
            </View>
          </View>
          <View>
            <Text
              style={
                Object {
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "marginBottom": 5,
                }
              }
            >
              Meu pai fez o que ela mandou…
            </Text>
            <Text>
              Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
            </Text>
          </View>
        </View>,
        <View>
          <Text
            style={
              Object {
                "fontStyle": "italic",
                "fontWeight": "bold",
                "paddingHorizontal": 10,
                "paddingVertical": 5,
              }
            }
          >
            2
             
            respostas
          </Text>
          <FlatList
            data={
              Array [
                Object {
                  "author": Object {
                    "avatarPath": Object {
                      "testUri": "../../../app/assets/images/profile-pic-annon.png",
                    },
                    "name": "Kelli S",
                  },
                  "body": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
                  "dateCreated": 2019-01-02T00:00:00.000Z,
                  "id": "21098",
                },
                Object {
                  "author": Object {
                    "avatarPath": Object {
                      "testUri": "../../../app/assets/images/profile-pic-annon.png",
                    },
                    "name": "Kelli S",
                  },
                  "body": "Nem faço mais questão de saber pra onde ele foi.",
                  "dateCreated": 2019-01-03T00:00:00.000Z,
                  "id": "21099",
                },
              ]
            }
            disableVirtualization={false}
            horizontal={false}
            initialNumToRender={10}
            keyExtractor={[Function]}
            maxToRenderPerBatch={10}
            numColumns={1}
            onEndReachedThreshold={2}
            renderItem={[Function]}
            scrollEventThrottle={50}
            updateCellsBatchingPeriod={50}
            windowSize={21}
          />
        </View>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <Text
              style={
                Object {
                  "fontStyle": "italic",
                  "marginHorizontal": 5,
                  "padding": 10,
                }
              }
            >
              &lt; 
              Voltar aos Comentários
            </Text>
          </TouchableOpacity>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Text
              style={
                Object {
                  "fontStyle": "italic",
                  "marginHorizontal": 5,
                  "padding": 10,
                }
              }
            >
              &lt; 
              Voltar aos Comentários
            </Text>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "< ",
                "Voltar aos Comentários",
              ],
              "style": Object {
                "fontStyle": "italic",
                "marginHorizontal": 5,
                "padding": 10,
              },
            },
            "ref": null,
            "rendered": Array [
              "< ",
              "Voltar aos Comentários",
            ],
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Component
                source={
                  Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 30,
                    "height": 60,
                    "marginBottom": 10,
                    "overflow": "hidden",
                    "width": 60,
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingLeft": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  Maynara F
                </Text>
                <Text
                  style={
                    Object {
                      "color": "rgb(51, 51, 51)",
                      "fontStyle": "italic",
                      "marginBottom": 10,
                    }
                  }
                >
                  01/01/2019
                </Text>
              </View>
            </View>,
            <View>
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                  }
                }
              >
                Meu pai fez o que ela mandou…
              </Text>
              <Text>
                Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
              </Text>
            </View>,
          ],
          "style": Object {
            "backgroundColor": "rgba(198, 213, 225, 0.75)",
            "marginBottom": 20,
            "padding": 10,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 30,
                      "height": 60,
                      "marginBottom": 10,
                      "overflow": "hidden",
                      "width": 60,
                    }
                  }
                />,
                <View
                  style={
                    Object {
                      "paddingLeft": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "marginBottom": 5,
                      }
                    }
                  >
                    Maynara F
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "rgb(51, 51, 51)",
                        "fontStyle": "italic",
                        "marginBottom": 10,
                      }
                    }
                  >
                    01/01/2019
                  </Text>
                </View>,
              ],
              "style": Object {
                "flexDirection": "row",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "source": Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  },
                  "style": Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 30,
                    "height": 60,
                    "marginBottom": 10,
                    "overflow": "hidden",
                    "width": 60,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <Text
                      style={
                        Object {
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "marginBottom": 5,
                        }
                      }
                    >
                      Maynara F
                    </Text>,
                    <Text
                      style={
                        Object {
                          "color": "rgb(51, 51, 51)",
                          "fontStyle": "italic",
                          "marginBottom": 10,
                        }
                      }
                    >
                      01/01/2019
                    </Text>,
                  ],
                  "style": Object {
                    "paddingLeft": 10,
                  },
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "Maynara F",
                      "style": Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "marginBottom": 5,
                      },
                    },
                    "ref": null,
                    "rendered": "Maynara F",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": "01/01/2019",
                      "style": Object {
                        "color": "rgb(51, 51, 51)",
                        "fontStyle": "italic",
                        "marginBottom": 10,
                      },
                    },
                    "ref": null,
                    "rendered": "01/01/2019",
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  Meu pai fez o que ela mandou…
                </Text>,
                <Text>
                  Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
                </Text>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Meu pai fez o que ela mandou…",
                  "style": Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                  },
                },
                "ref": null,
                "rendered": "Meu pai fez o que ela mandou…",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                },
                "ref": null,
                "rendered": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Text
              style={
                Object {
                  "fontStyle": "italic",
                  "fontWeight": "bold",
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              2
               
              respostas
            </Text>,
            <FlatList
              data={
                Array [
                  Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/profile-pic-annon.png",
                      },
                      "name": "Kelli S",
                    },
                    "body": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
                    "dateCreated": 2019-01-02T00:00:00.000Z,
                    "id": "21098",
                  },
                  Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/profile-pic-annon.png",
                      },
                      "name": "Kelli S",
                    },
                    "body": "Nem faço mais questão de saber pra onde ele foi.",
                    "dateCreated": 2019-01-03T00:00:00.000Z,
                    "id": "21099",
                  },
                ]
              }
              disableVirtualization={false}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              numColumns={1}
              onEndReachedThreshold={2}
              renderItem={[Function]}
              scrollEventThrottle={50}
              updateCellsBatchingPeriod={50}
              windowSize={21}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                2,
                " ",
                "respostas",
              ],
              "style": Object {
                "fontStyle": "italic",
                "fontWeight": "bold",
                "paddingHorizontal": 10,
                "paddingVertical": 5,
              },
            },
            "ref": null,
            "rendered": Array [
              2,
              " ",
              "respostas",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "data": Array [
                Object {
                  "author": Object {
                    "avatarPath": Object {
                      "testUri": "../../../app/assets/images/profile-pic-annon.png",
                    },
                    "name": "Kelli S",
                  },
                  "body": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
                  "dateCreated": 2019-01-02T00:00:00.000Z,
                  "id": "21098",
                },
                Object {
                  "author": Object {
                    "avatarPath": Object {
                      "testUri": "../../../app/assets/images/profile-pic-annon.png",
                    },
                    "name": "Kelli S",
                  },
                  "body": "Nem faço mais questão de saber pra onde ele foi.",
                  "dateCreated": 2019-01-03T00:00:00.000Z,
                  "id": "21099",
                },
              ],
              "disableVirtualization": false,
              "horizontal": false,
              "initialNumToRender": 10,
              "keyExtractor": [Function],
              "maxToRenderPerBatch": 10,
              "numColumns": 1,
              "onEndReachedThreshold": 2,
              "renderItem": [Function],
              "scrollEventThrottle": 50,
              "updateCellsBatchingPeriod": 50,
              "windowSize": 21,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Text
                style={
                  Object {
                    "fontStyle": "italic",
                    "marginHorizontal": 5,
                    "padding": 10,
                  }
                }
              >
                &lt; 
                Voltar aos Comentários
              </Text>
            </TouchableOpacity>
          </View>,
          <View
            style={
              Object {
                "backgroundColor": "rgba(198, 213, 225, 0.75)",
                "marginBottom": 20,
                "padding": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Component
                source={
                  Object {
                    "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                  }
                }
                style={
                  Object {
                    "backgroundColor": "rgba(4, 71, 47, 0.75)",
                    "borderRadius": 30,
                    "height": 60,
                    "marginBottom": 10,
                    "overflow": "hidden",
                    "width": 60,
                  }
                }
              />
              <View
                style={
                  Object {
                    "paddingLeft": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  Maynara F
                </Text>
                <Text
                  style={
                    Object {
                      "color": "rgb(51, 51, 51)",
                      "fontStyle": "italic",
                      "marginBottom": 10,
                    }
                  }
                >
                  01/01/2019
                </Text>
              </View>
            </View>
            <View>
              <Text
                style={
                  Object {
                    "fontSize": 18,
                    "fontWeight": "bold",
                    "marginBottom": 5,
                  }
                }
              >
                Meu pai fez o que ela mandou…
              </Text>
              <Text>
                Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
              </Text>
            </View>
          </View>,
          <View>
            <Text
              style={
                Object {
                  "fontStyle": "italic",
                  "fontWeight": "bold",
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                }
              }
            >
              2
               
              respostas
            </Text>
            <FlatList
              data={
                Array [
                  Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/profile-pic-annon.png",
                      },
                      "name": "Kelli S",
                    },
                    "body": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
                    "dateCreated": 2019-01-02T00:00:00.000Z,
                    "id": "21098",
                  },
                  Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/profile-pic-annon.png",
                      },
                      "name": "Kelli S",
                    },
                    "body": "Nem faço mais questão de saber pra onde ele foi.",
                    "dateCreated": 2019-01-03T00:00:00.000Z,
                    "id": "21099",
                  },
                ]
              }
              disableVirtualization={false}
              horizontal={false}
              initialNumToRender={10}
              keyExtractor={[Function]}
              maxToRenderPerBatch={10}
              numColumns={1}
              onEndReachedThreshold={2}
              renderItem={[Function]}
              scrollEventThrottle={50}
              updateCellsBatchingPeriod={50}
              windowSize={21}
            />
          </View>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
            >
              <Text
                style={
                  Object {
                    "fontStyle": "italic",
                    "marginHorizontal": 5,
                    "padding": 10,
                  }
                }
              >
                &lt; 
                Voltar aos Comentários
              </Text>
            </TouchableOpacity>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Text
                style={
                  Object {
                    "fontStyle": "italic",
                    "marginHorizontal": 5,
                    "padding": 10,
                  }
                }
              >
                &lt; 
                Voltar aos Comentários
              </Text>,
              "onPress": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "< ",
                  "Voltar aos Comentários",
                ],
                "style": Object {
                  "fontStyle": "italic",
                  "marginHorizontal": 5,
                  "padding": 10,
                },
              },
              "ref": null,
              "rendered": Array [
                "< ",
                "Voltar aos Comentários",
              ],
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Component
                  source={
                    Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    }
                  }
                  style={
                    Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 30,
                      "height": 60,
                      "marginBottom": 10,
                      "overflow": "hidden",
                      "width": 60,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "paddingLeft": 10,
                    }
                  }
                >
                  <Text
                    style={
                      Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "marginBottom": 5,
                      }
                    }
                  >
                    Maynara F
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "rgb(51, 51, 51)",
                        "fontStyle": "italic",
                        "marginBottom": 10,
                      }
                    }
                  >
                    01/01/2019
                  </Text>
                </View>
              </View>,
              <View>
                <Text
                  style={
                    Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    }
                  }
                >
                  Meu pai fez o que ela mandou…
                </Text>
                <Text>
                  Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
                </Text>
              </View>,
            ],
            "style": Object {
              "backgroundColor": "rgba(198, 213, 225, 0.75)",
              "marginBottom": 20,
              "padding": 10,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Component
                    source={
                      Object {
                        "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                      }
                    }
                    style={
                      Object {
                        "backgroundColor": "rgba(4, 71, 47, 0.75)",
                        "borderRadius": 30,
                        "height": 60,
                        "marginBottom": 10,
                        "overflow": "hidden",
                        "width": 60,
                      }
                    }
                  />,
                  <View
                    style={
                      Object {
                        "paddingLeft": 10,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "marginBottom": 5,
                        }
                      }
                    >
                      Maynara F
                    </Text>
                    <Text
                      style={
                        Object {
                          "color": "rgb(51, 51, 51)",
                          "fontStyle": "italic",
                          "marginBottom": 10,
                        }
                      }
                    >
                      01/01/2019
                    </Text>
                  </View>,
                ],
                "style": Object {
                  "flexDirection": "row",
                },
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "source": Object {
                      "testUri": "../../../app/assets/images/profile-pic-may.jpg",
                    },
                    "style": Object {
                      "backgroundColor": "rgba(4, 71, 47, 0.75)",
                      "borderRadius": 30,
                      "height": 60,
                      "marginBottom": 10,
                      "overflow": "hidden",
                      "width": 60,
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <Text
                        style={
                          Object {
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "marginBottom": 5,
                          }
                        }
                      >
                        Maynara F
                      </Text>,
                      <Text
                        style={
                          Object {
                            "color": "rgb(51, 51, 51)",
                            "fontStyle": "italic",
                            "marginBottom": 10,
                          }
                        }
                      >
                        01/01/2019
                      </Text>,
                    ],
                    "style": Object {
                      "paddingLeft": 10,
                    },
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "Maynara F",
                        "style": Object {
                          "fontSize": 18,
                          "fontWeight": "bold",
                          "marginBottom": 5,
                        },
                      },
                      "ref": null,
                      "rendered": "Maynara F",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": "01/01/2019",
                        "style": Object {
                          "color": "rgb(51, 51, 51)",
                          "fontStyle": "italic",
                          "marginBottom": 10,
                        },
                      },
                      "ref": null,
                      "rendered": "01/01/2019",
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Text
                    style={
                      Object {
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "marginBottom": 5,
                      }
                    }
                  >
                    Meu pai fez o que ela mandou…
                  </Text>,
                  <Text>
                    Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
                  </Text>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Meu pai fez o que ela mandou…",
                    "style": Object {
                      "fontSize": 18,
                      "fontWeight": "bold",
                      "marginBottom": 5,
                    },
                  },
                  "ref": null,
                  "rendered": "Meu pai fez o que ela mandou…",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                  },
                  "ref": null,
                  "rendered": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Text
                style={
                  Object {
                    "fontStyle": "italic",
                    "fontWeight": "bold",
                    "paddingHorizontal": 10,
                    "paddingVertical": 5,
                  }
                }
              >
                2
                 
                respostas
              </Text>,
              <FlatList
                data={
                  Array [
                    Object {
                      "author": Object {
                        "avatarPath": Object {
                          "testUri": "../../../app/assets/images/profile-pic-annon.png",
                        },
                        "name": "Kelli S",
                      },
                      "body": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
                      "dateCreated": 2019-01-02T00:00:00.000Z,
                      "id": "21098",
                    },
                    Object {
                      "author": Object {
                        "avatarPath": Object {
                          "testUri": "../../../app/assets/images/profile-pic-annon.png",
                        },
                        "name": "Kelli S",
                      },
                      "body": "Nem faço mais questão de saber pra onde ele foi.",
                      "dateCreated": 2019-01-03T00:00:00.000Z,
                      "id": "21099",
                    },
                  ]
                }
                disableVirtualization={false}
                horizontal={false}
                initialNumToRender={10}
                keyExtractor={[Function]}
                maxToRenderPerBatch={10}
                numColumns={1}
                onEndReachedThreshold={2}
                renderItem={[Function]}
                scrollEventThrottle={50}
                updateCellsBatchingPeriod={50}
                windowSize={21}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  2,
                  " ",
                  "respostas",
                ],
                "style": Object {
                  "fontStyle": "italic",
                  "fontWeight": "bold",
                  "paddingHorizontal": 10,
                  "paddingVertical": 5,
                },
              },
              "ref": null,
              "rendered": Array [
                2,
                " ",
                "respostas",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "data": Array [
                  Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/profile-pic-annon.png",
                      },
                      "name": "Kelli S",
                    },
                    "body": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
                    "dateCreated": 2019-01-02T00:00:00.000Z,
                    "id": "21098",
                  },
                  Object {
                    "author": Object {
                      "avatarPath": Object {
                        "testUri": "../../../app/assets/images/profile-pic-annon.png",
                      },
                      "name": "Kelli S",
                    },
                    "body": "Nem faço mais questão de saber pra onde ele foi.",
                    "dateCreated": 2019-01-03T00:00:00.000Z,
                    "id": "21099",
                  },
                ],
                "disableVirtualization": false,
                "horizontal": false,
                "initialNumToRender": 10,
                "keyExtractor": [Function],
                "maxToRenderPerBatch": 10,
                "numColumns": 1,
                "onEndReachedThreshold": 2,
                "renderItem": [Function],
                "scrollEventThrottle": 50,
                "updateCellsBatchingPeriod": 50,
                "windowSize": 21,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
